<resources>
    <string name="app_name">music_player</string>
    <string name="find_back_pwd">找回密码</string>
    <string name="register_now">立即注册</string>
    <string name="login">登陆</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_password_again">请再次输入密码</string>
    <string name="search_local">搜索本地</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="next">下一首</string>
    <string name="previous">前一首</string>
    <string name="test">测试</string>
    <string name="more">更多功能</string>
</resources>
