<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_color2"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/search"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/search"
        android:textColor="@color/colorWhite"
        android:background="@color/transparent"
        style="?android:attr/borderlessButtonStyle"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
    </ListView>

    <SeekBar
        android:id="@+id/seek"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:text="@string/play"
            android:textSize="20sp"
            android:onClick="click"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/button_pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:text="@string/pause"
            android:textSize="20sp"
            android:onClick="click"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/button_last"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:text="@string/previous"
            android:textSize="20sp"
            android:onClick="click"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:layout_weight="1"
            android:text="@string/next"
            android:textSize="20sp"
            android:onClick="click"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>