<?xml version="1.0" encoding="utf-8"?>
<!--登录界面,用LinearLayout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <!--标题栏-->
    <include layout="@layout/main_title_bar"></include>
    <!--显示头像，记得加入id iv_head -->
    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"/>
    <!--输入框-->
    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorWhite"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_username"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="14sp"/>
    <!--输入框-->
    <EditText
        android:id="@+id/et_psw"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/colorWhite"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        android:textSize="14sp"/>
    <!--按钮-->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_color"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <!--显示tv register , find_psw -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="35dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:text="@string/register_now"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlue"
            android:textSize="14sp"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/tv_find_psw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:text="@string/find_back_pwd"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlue"
            android:textSize="14sp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</LinearLayout>